# robocop

./: CLAUDE.md  Cargo.toml  DESIGN.md  IMPLEMENTATION_PLAN.md  LICENSE  PLAN.md  README.md  TODO.md  dashboard.html  flake.nix  pipeline-diff-review.py
.github/workflows/: ci.yml
dashboard/: app.js  index.html  openai.js  rendering.js  styles.css
github-bot/: Cargo.toml  prompt.txt
github-bot/src/: batch_processor.rs  command.rs  config.rs  github.rs  help.html  lib.rs  main.rs  openai.rs  review_state.rs  webhook.rs
github-bot/src/recording/: mod.rs  test_utils.rs
github-bot/tests/: snapshot_tests.rs
github-bot/tests/recordings/: sample1.jsonl
github-bot/tests/snapshots/: snapshot_tests__openai_api_calls_tests_recordings_sample1.jsonl.snap
python/: Makefile  requirements.txt  robocop.py
robocop-cli/: Cargo.toml
robocop-cli/src/: main.rs
robocop-core/: Cargo.toml  build.rs  prompt.txt
robocop-core/src/: git.rs  lib.rs  openai.rs  review.rs
robocop-core/src/recording/: middleware.rs  mod.rs  sanitizer.rs  types.rs
robocop-server/: Cargo.toml  build.rs
robocop-server/proptest-regressions/state_machine/: transition.txt
robocop-server/proptest-regressions/state_machine/repository/: sqlite.txt
robocop-server/proptest-regressions/state_machine/transition/: mod.txt
robocop-server/src/: batch_processor.rs  command.rs  config.rs  db.rs  git.rs  github.rs  help.html  lib.rs  main.rs  openai.rs  openai_webhook.rs  persistent_store.rs  reconciliation.rs  review_state.rs  status.html  status.rs  webhook.rs
robocop-server/src/dashboard/: dashboard.html  handlers.rs  mod.rs  types.rs
robocop-server/src/recording/: logger.rs  middleware.rs  sanitizer.rs
robocop-server/src/state_machine/: effect.rs  event.rs  interpreter.rs  mod.rs  state.rs  store.rs  transition.rs
robocop-server/src/state_machine/repository/: memory.rs  mod.rs  sqlite.rs
robocop-server/src/state_machine/repository/sqlite/: events.rs  mod.rs  tests.rs  webhook.rs
robocop-server/src/state_machine/transition/: awaiting_ancestry.rs  batch_pending.rs  batch_submitting.rs  idle.rs  mod.rs  preparing.rs  terminal.rs
robocop-server/tests/: snapshot_tests.rs
robocop-server/tests/snapshots/: snapshot_tests__complete_scenarios_tests_recordings_sample1.jsonl.snap  snapshot_tests__github_api_calls_tests_recordings_sample1.jsonl.snap  snapshot_tests__openai_api_calls_tests_recordings_sample1.jsonl.snap  snapshot_tests__request_response_pairs_tests_recordings_sample1.jsonl.snap  snapshot_tests__webhook_events_tests_recordings_sample1.jsonl.snap
