[package]
name = "robocop-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "robocop"
path = "src/main.rs"

[dependencies]
robocop-core = { path = "../robocop-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
