[package]
name = "robocop-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls", "multipart"], default-features = false }

[dev-dependencies]
insta = "1.34"
