[package]
name = "robocop-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
tokio = { version = "1.0", features = ["rt", "macros", "sync", "fs", "io-util"] }
reqwest-middleware = "0.4"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
url = "2.5"
http = "1.0"

[dev-dependencies]
insta = "1.34"
