[package]
name = "robocop-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "robocop-server"
path = "src/main.rs"

[dependencies]
robocop-core = { path = "../robocop-core" }
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
anyhow.workspace = true
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest-middleware = "0.4"
task-local-extensions = "0.1"
async-trait = "0.1"
url = "2.5"
base64 = "0.22"
jsonwebtoken = "9.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
insta = "1.34"
tokio-test = "0.4"
wiremock = "0.6"
